# pharma-job-search

./: README.md  pyproject.toml
docs/: INSTALL_GUIDE.md
